--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,11 +6,10 @@
     <title>MyApp</title>
 </head>
 <body>
-    before
-    <br>
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errorMessage.ejs') %>
     <%- body %>
-    <br>
-    After
+   
 
 
 </body>
